hphp/hack/test/typecheck/argument_unpacking/unpack_call11.php.exp
File "unpack_call11.php", line 30, characters 3-36:
Too many arguments (Typing[4105])
  File "unpack_call11.php", line 40, characters 10-18:
  Definition is here
File "unpack_call11.php", line 31, characters 26-27:
Invalid argument (Typing[4110])
  File "unpack_call11.php", line 44, characters 33-33:
  This is an object of type E
  File "unpack_call11.php", line 15, characters 12-18:
  It is incompatible with an object of type B
File "unpack_call11.php", line 31, characters 26-27:
Invalid argument (Typing[4110])
  File "unpack_call11.php", line 44, characters 27-27:
  This is an object of type B
  File "unpack_call11.php", line 15, characters 21-27:
  It is incompatible with an object of type E
